# Machine-Learning-Project

./: .gitignore  README.md  kbo.py  kbo2.py  kbo_2024_attendance_real.csv  kbo_2024_attendance_weather.csv  kbo_2024_cleaned.csv  kbo_2024_weather.csv  kbo_2025_attendance_real.csv  kbo_2025_attendance_weather.csv  kbo_2025_cleaned.csv  kbo_2025_weather.csv  kbo_data.py  kbo_size.py  kbo_stadium_info.csv  packages.txt  preprocess_attendance_weather.py  requirements.txt  weather2024,2025.py  weather_cache.json
machine-learning-project/: pyproject.toml  requirements.txt
machine-learning-project/data/interim/: kbo_2024_attendance_weather.csv  kbo_2025_attendance_weather.csv
machine-learning-project/data/processed/: final_dataset.csv  kbo_train_ready.csv
machine-learning-project/data/raw/: kbo_2024_attendance.csv  kbo_2025_attendance.csv
machine-learning-project/models/: attendance_lgbm_pipeline.joblib  attendance_rf_pipeline.joblib  attendance_xgb_pipeline.joblib  best_lgbm_params.json  best_params.json  best_xgb_params.json  eval_report.json  test_indices.npy  train_report.json
machine-learning-project/reports/eda/: eda_summary.md  feature_engineering_plan.txt
machine-learning-project/reports/modeling/: model_benchmark.json
machine-learning-project/scripts/app/: __init__.py  csv_batch_predict_ui.py  kbo_2024_attendance_weather.csv  kbo_2025_attendance_weather.csv  streamlit_app.py
machine-learning-project/scripts/common/: __init__.py  config.py  congestion_levels.py  kbo_regular_start_time.py  kma_vilage_fcst.py  logging_config.py  stadium_aliases.py  (+1 more)
(+29 files in other folders)
