[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kbo-ml-scripts"
version = "0.1.0"
description = "KBO attendance ML pipeline — scripts as installable packages (common, app, …)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "selenium>=4.15",
    "webdriver-manager>=4.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "streamlit>=1.28",
    "optuna>=3.4",
    "lightgbm>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["scripts"]
